erDiagram
    Room {
        string id PK
        string name
        string description
        double price
        string imageUrl
        boolean isBooked
        string checkInDate
        string checkOutDate
        string checkInTime
        string checkOutTime
    }

    User {
        string id PK
        string name
        string email
        string phone
        string address
    }

    Booking {
        string id PK
        string userId FK
        string roomId FK
        string bookingDate
        double totalPrice
        string status
    }

    Review {
        string id PK
        string userId FK
        string roomId FK
        int rating
        string comment
        string reviewDate
    }

    Offer {
        string id PK
        string roomId FK
        string title
        string description
        double discountPercentage
        string startDate
        string endDate
        boolean isActive
    }

    User ||--o{ Booking : "makes"
    Room ||--o{ Booking : "has"
    User ||--o{ Review : "writes"
    Room ||--o{ Review : "receives"
    Room ||--o{ Offer : "has"
} 